Changed Java ver